--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aresky-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://areskyb.github.io/Portfolio/",
+  "homepage": "https://areskyberkane.com/",
   "dependencies": {
     "gh-pages": "^3.1.0",
     "react": "^16.8.6",
