--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^3.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hotjar": "^2.2.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.0.1",
     "react-scroll": "^1.7.12"
